--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+201908-citibike-tripdata.csv
+resources/deliverable2/citibikeaug19.csv 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
